--- a/1633972602@qq.com/public/css/main.css
+++ b/1633972602@qq.com/public/css/main.css
@@ -1998,7 +1998,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #abaddd;
+  background: #ffffec;
 }
 .links-of-blogroll {
   font-size: 13px;
